--- a/DOWTank/Views/TankHistory/Index.cshtml
+++ b/DOWTank/Views/TankHistory/Index.cshtml
@@ -37,7 +37,7 @@
                 <div class="col-md-6 mt10">
                     @if (Convert.ToBoolean(ViewBag.AllowEditTankInfo))
                     {
-                        <a href="javascript:void(0)" onclick=" alert('will be linked when Edit Tank web form ll be ready') ">Edit Tank Info</a>
+                        @Html.ActionLink("Edit Tank Info", "Equipment", "Admin", new { @EquipmentAN = @Model.TextSearch }, null)
                     }
                 </div>
             </div>
@@ -300,7 +300,7 @@
                 <div class="col-md-6 mt10">
                     @if (Convert.ToBoolean(ViewBag.AllowEditTankInfo))
                     {
-                        <a href="javascript:void(0)" onclick=" alert('will be linked when Add History web form ll be ready') ">Edit Tank Info</a>
+                        @Html.ActionLink("Edit Tank Info", "Equipment", "Admin", new { @EquipmentAN = @Model.TextSearch }, null)
                     }
                 </div>
             </div>
